# nguni-joint-morphological-parsing

./: .gitignore  bilstm-words-character-ZU-fixed-batch.pt  parser-zu-sentences.pt  pyproject.toml  sum_probs_div_len.txt  testing_seg.pt
data/processed/dev/: nr_dev.tsv  ss_dev.tsv  xh_dev.tsv  zu_dev.tsv
data/processed/test/: nr_test.tsv  ss_test.tsv  xh_test.tsv  zu_test.tsv
data/processed/train/: nr_train.tsv  ss_train.tsv  xh_train.tsv  zu_train.tsv
